jenkins/jenkins_03_create_statefulset.yaml
# jenkins
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: jenkins
  labels:
    name: jenkins
    app: jenkins
spec:
  serviceName: jenkins-headless
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      name: jenkins
      labels:
        name: jenkins
        app: jenkins
    spec:
      terminationGracePeriodSeconds: 10
      serviceAccountName: jenkins
      containers:
        - name: jenkins
          image: $CONTAINER_IMAGE
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 50000
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 0.5
              memory: 500Mi
          volumeMounts:
            - name: jenkins-configuration-as-code
              mountPath: /var/jenkins_config
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: docker-sock
              mountPath: /var/run
          livenessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 5
      securityContext:
        fsGroup: 1000
      volumes:
        # The configuration-as-code ConfigMap
        - name: jenkins-configuration-as-code
          configMap:
            name: jenkins-configuration-as-code
        - name: docker-sock
          hostPath:
            path: /var/run            
      imagePullSecrets:
      - name: myregistrykey2
  volumeClaimTemplates:
    - metadata:
        name: jenkins-home
        # annotations:
        #   volume.beta.kubernetes.io/storage-class: anything
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 30Gi

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-headless
  labels:
    app: jenkins
  annotations:
    # ensure the client ip is propagated to avoid the invalid crumb issue (k8s <1.7)
    # service.beta.kubernetes.io/external-traffic: OnlyLocal
spec:
  clusterIP: None
  selector:
    app: jenkins
  # k8s 1.7+
  #externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: agent
      port: 50000
      protocol: TCP
