jenkins/jenkins_04_create_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app: jenkins  
  annotations:
    # ensure the client ip is propagated to avoid the invalid crumb issue (k8s <1.7)
    # service.beta.kubernetes.io/external-traffic: OnlyLocal
spec:
  type: NodePort
  selector:
    app: jenkins
    statefulset.kubernetes.io/pod-name: jenkins-0
  # k8s 1.7+
  #externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: agent
      port: 50000
      protocol: TCP
